# unified-profile-for-travellers-and-guests-on-aws

./: .gitignore  .viperlightignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  NOTICE  README.md  buildspec.yml  go.mod  go.sum  run_sonar_local.sh  run_viperlight_local.sh  sonar-project.properties  tah.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tah-demo-cleanup.yml  tah-demo-deployment.yml
deployment/: build-s3-dist.sh  run-unit-tests.sh  setup-dependencies.sh  solution_config
deployment/cdk-solution-helper/: index.js  index.ts  jest.config.ts  package-lock.json  package.json  tsconfig.json
deployment/ucp-code-pipelines/: .gitignore  cdk.json  deploy-local.sh  deploy.sh  package.json  synthetize.sh
schemas/: .gitignore  deploy-local.sh  deploy.sh  generate.sh
schemas/generators/: README.md
schemas/glue_schemas/: customer_service_interaction.glue.json  guest_profile.glue.json  hotel_booking.glue.json  pax_profile.glue.json  (+1 more)
source/: .dockerignore  .gitallowed  .gitignore  Dockerfile.frontend  appPermissions.json  deploy-local-all.sh  env-demo.json  env.example.json  run-all-tests.sh  run-local-aurora.sh  update-private-packages.sh
source/tah_lib/: .flake8  pyproject.toml  requirements_dev.txt
source/tah_lib/tah_lib/: air_bookingTransform.py  clickstreamTransform.py  common.py  customer_service_interactionTransform.py  etl_utils.py  guest_profileTransform.py  hotel_bookingTransform.py  hotel_stayTransform.py  pax_profileTransform.py
source/tah_lib/tests/: test_tah_lib.py
(+1280 files in other folders)
